cabal-version:      3.0
name:               tmcr-unirom-server
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Ibot02
maintainer:         jtp.jtp@gmx.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tmcr-unirom-server
    import:           warnings
    main-is:          Main.hs
    other-modules:    Protocol
                    , Handler
                    , Items
                    , Settings
                    , Entrances
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , bytestring
                    , stm
                    , async
                    , network
                    , lens
                    , conduit
                    , conduit-extra
                    , mtl
                    , containers
                    , aeson
                    , stm-containers
                    , binary
    hs-source-dirs:   app
    default-language: Haskell2010
